--- a/meter_readings.html
+++ b/meter_readings.html
@@ -39,8 +39,9 @@
                 <th>Initial Reading</th>
                 <th>Current Reading</th>
                 <th>Difference</th>
-                <th>Target Difference</th>
+                <th>Target Units</th>
                 <th>Units Required</th>
+                <th>Estimated Bill</th>
             </tr>
         </table>
     </form>
@@ -71,8 +72,9 @@
                             <input type="number" id="current${index}" placeholder="${entry.currentReading}" oninput="recalculate(${index})" />
                         </td>
                         <td id="difference${index}">0</td>
-                        <td><input type="number" id="targetDifference${index}" value="${entry.targetReading}" disabled /></td>
+                        <td><input type="number" id="targetUnits${index}" value="${entry.targetUnits}" disabled /></td>
                         <td id="units${index}">0</td>
+                        <td id="estimatedBill${index}">${entry.EstimatedBill || 0}</td>
                     `;
 
                     table.appendChild(row);
@@ -88,13 +90,13 @@
         // Function to recalculate differences and units required
         function recalculate(index) {
             const initial = parseFloat(document.getElementById(`initial${index}`).value) || 0;
-            const targetDifference = parseFloat(document.getElementById(`targetDifference${index}`).value) || 0;
+            const targetUnits = parseFloat(document.getElementById(`targetUnits${index}`).value) || 0;
 
             const currentInput = document.getElementById(`current${index}`);
             const current = currentInput.value ? parseFloat(currentInput.value) : parseFloat(currentInput.placeholder) || 0;
 
             const difference = current - initial;
-            const unitsRequired = targetDifference - difference;
+            const unitsRequired = targetUnits - difference;
 
             document.getElementById(`difference${index}`).innerText = difference;
             document.getElementById(`units${index}`).innerText = unitsRequired;
