--- a/getDeliveredRecordsSum.html
+++ b/getDeliveredRecordsSum.html
@@ -26,7 +26,7 @@
         <input type="date" class="date-picker">
         <input type="date" class="date-picker">
     </div>
-    <button onclick="addDateInput()">+ Add Date</button>
+    <button onclick="addDateInput()">+ Add Date33</button>
     <button onclick="fetchData()">Get Delivered KG</button>
     
     <p id="loading">Fetching data...</p>
