--- a/getDeliveredRecordsSum.html
+++ b/getDeliveredRecordsSum.html
@@ -5,74 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Delivered KG Report</title>
     <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #f9f9f9;
-            margin: 0;
-            padding: 20px;
-            text-align: center;
-        }
-        .container {
-            max-width: 800px;
-            background: white;
-            padding: 20px;
-            margin: auto;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-            border-radius: 10px;
-        }
-        h2 {
-            color: #333;
-        }
-        .input-group {
-            margin-bottom: 15px;
-        }
-        input, button {
-            padding: 10px;
-            border-radius: 5px;
-            border: 1px solid #ddd;
-            font-size: 16px;
-        }
-        button {
-            background-color: #28a745;
-            color: white;
-            border: none;
-            cursor: pointer;
-            margin: 5px;
-        }
-        button:hover {
-            background-color: #218838;
-        }
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 20px;
-            display: none;
-            background: white;
-        }
-        th, td {
-            border: 1px solid #ddd;
-            padding: 10px;
-            text-align: center;
-        }
-        th {
-            background-color: #007bff;
-            color: white;
-        }
-        tr:nth-child(even) {
-            background-color: #f2f2f2;
-        }
-        tr:hover {
-            background-color: #ddd;
-        }
-        .highlight {
-            background-color: yellow;
-            font-weight: bold;
-        }
-        #loading {
-            display: none;
-            font-size: 16px;
-            color: blue;
-        }
+        body { font-family: Arial, sans-serif; margin: 20px; }
+        .container { max-width: 1000px; margin: auto; text-align: center; }
+        input { margin: 5px; }
+        table { width: 100%; border-collapse: collapse; margin-top: 20px; display: none; }
+        th, td { border: 1px solid #ddd; padding: 8px; text-align: center; }
+        th { background-color: #f4f4f4; }
+        .highlight { background-color: yellow; font-weight: bold; }
+        #loading { display: none; font-size: 14px; color: blue; }
+        .total-row { font-weight: bold; background-color: #f4f4f4; }
+        .total-col { font-weight: bold; background-color: #f4f4f4; }
     </style>
 </head>
 <body>
@@ -80,7 +22,7 @@
 <div class="container">
     <h2>Delivered KG Report</h2>
     <label>Select at least 1 date:</label>
-    <div class="input-group" id="dateInputs">
+    <div id="dateInputs">
         <input type="date" class="date-picker">
     </div>
     <button onclick="addDateInput()">+ Add Date</button>
@@ -95,7 +37,8 @@
                 <th>Total</th>
             </tr>
         </thead>
-        <tbody></tbody>
+        <tbody>
+        </tbody>
         <tfoot>
             <tr id="tableFooter">
                 <th>Total</th>
@@ -105,6 +48,8 @@
 </div>
 
 <script>
+    const apiUrl = 'https://script.google.com/macros/s/AKfycby0rORN4PWBqs2XR2JFTlMHBA2kphA7A8LLrAQ40yF8aiXveEa1cqUJA-glH36VdRZ0Pg/exec';
+
     function addDateInput() {
         let container = document.getElementById("dateInputs");
         let input = document.createElement("input");
@@ -113,14 +58,111 @@
         container.appendChild(input);
     }
 
-    function fetchData() {
+    function formatDateToIST(utcDateString) {
+        let date = new Date(utcDateString);
+        date.setHours(date.getHours() + 5, date.getMinutes() + 30); // Convert to IST (UTC+5:30)
+        return date.toISOString().split('T')[0]; // Convert to YYYY-MM-DD
+    }
+
+    async function fetchData() {
+        let selectedDates = [...document.querySelectorAll(".date-picker")]
+            .map(input => input.value)
+            .filter(date => date !== "");
+
         document.getElementById("loading").style.display = "block";
         document.getElementById("resultTable").style.display = "none";
 
-        setTimeout(() => {
+        const formData = new FormData();
+        formData.append('operations', '[{"opCode":"FETCH_ALL","sheetId":"11TA2pPlxqajVwkPEigNMPNfsV-12CExxmySk1OMw_v8","tabName":"deliveries","opId":"mbros-github-site"}]');
+
+        try {
+            const response = await fetch(apiUrl, {
+                method: 'POST',
+                body: formData
+            });
+
+            const result = await response.json();
+            if (!result || !result.length || result[0].statusCode !== 200) {
+                alert("Invalid response from API");
+                return;
+            }
+
+            const data = result[0].content || [];
+            console.log("Fetched Data:", data);
+
+            let formattedSelectedDates = selectedDates.map(date => formatDateToIST(date));
+            let filteredData = data.filter(entry => formattedSelectedDates.includes(formatDateToIST(entry.timestamp)));
+
+            if (filteredData.length === 0) {
+                alert("No matching records found.");
+                return;
+            }
+
+            let customerData = {};
+            let dateSums = {};
+
+            filteredData.forEach(entry => {
+                let date = formatDateToIST(entry.timestamp);
+                let name = entry.name || "Unknown";
+                let deliveredKg = parseFloat(entry.deliveredKg || 0).toFixed(3);
+
+                if (!customerData[name]) {
+                    customerData[name] = {};
+                }
+                customerData[name][date] = (parseFloat(customerData[name][date] || 0) + parseFloat(deliveredKg)).toFixed(3);
+                dateSums[date] = (parseFloat(dateSums[date] || 0) + parseFloat(deliveredKg)).toFixed(3);
+            });
+
+            updateTable(formattedSelectedDates, customerData, dateSums);
+
+        } catch (error) {
+            console.error("Error fetching data:", error);
+            alert("Failed to fetch data. Please check the API.");
+        } finally {
             document.getElementById("loading").style.display = "none";
-            document.getElementById("resultTable").style.display = "table";
-        }, 2000);
+        }
+    }
+
+    function updateTable(selectedDates, customerData, dateSums) {
+        let tableHeader = document.getElementById("tableHeader");
+        let tableBody = document.querySelector("#resultTable tbody");
+        let tableFooter = document.getElementById("tableFooter");
+
+        tableHeader.innerHTML = "<th>Customer Name</th>";
+        selectedDates.forEach(date => {
+            tableHeader.innerHTML += `<th>${date}</th>`;
+        });
+        tableHeader.innerHTML += `<th>Total</th>`;
+
+        tableBody.innerHTML = "";
+        let grandTotal = 0;
+
+        Object.keys(customerData).forEach(customer => {
+            let rowSum = 0;
+            let row = `<tr><td>${customer}</td>`;
+
+            selectedDates.forEach(date => {
+                let deliveredKg = parseFloat(customerData[customer][date] || 0).toFixed(3);
+                row += `<td>${deliveredKg}</td>`;
+                rowSum += parseFloat(deliveredKg);
+            });
+
+            row += `<td class="total-row">${rowSum.toFixed(3)}</td>`;
+            tableBody.innerHTML += row;
+            grandTotal += rowSum;
+        });
+
+        tableFooter.innerHTML = `<th>Total</th>`;
+        let columnTotalRow = "";
+
+        selectedDates.forEach(date => {
+            columnTotalRow += `<td class="total-col">${parseFloat(dateSums[date] || 0).toFixed(3)}</td>`;
+        });
+
+        columnTotalRow += `<td class="total-col">${grandTotal.toFixed(3)}</td>`;
+        tableFooter.innerHTML += columnTotalRow;
+
+        document.getElementById("resultTable").style.display = "table";
     }
 </script>
 
