--- a/balance.html
+++ b/balance.html
@@ -56,7 +56,7 @@
         document.getElementById("resultTable").style.display = "none";
 
         const formData = new FormData();
-        formData.append('operations', '[{"opCode":"FETCH_ALL","sheetId":"11TA2pPlxqajVwkPEigNMPNfsV-12CExxmySk1OMw_v8","tabName":"transactions","opId":"mbros-github-site"}]');
+        formData.append('operations', '[{"opCode":"FETCH_ALL","sheetId":"11TA2pPlxqajVwkPEigNMPNfsV-12CExxmySk1OMw_v8","tabName":"deliveries","opId":"mbros-github-site"}]');
 
         try {
             const response = await fetch(apiUrl, {
