--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <title>Mondal Brothers Chicken Delivery Service</title>
   <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="header-style.css" />
-  <link rel="manifest" href="manifest.json">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700;800&display=swap" rel="stylesheet">
+    <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#f8b400">
   <script>
     if ("serviceWorker" in navigator) {
@@ -33,7 +34,7 @@
       <div class="logo-container">
           <img src="images/mb-icon.png" alt="Mondal Brothers Poultry Logo" class="logo">
       </div>
-    <h2>Mondal Brothers Poultry</h2>
+      <h2 class="page-title contrast">Mondal Brothers Chicken Delivery</h2>
     <p>Exclusive for Shops | Premium Quality | Modern Accounting with Daily SMS</p>
     <a href="tel:+919734075801" class="btn-call-rounded">📞 Call Now</a>
       <br/>
