--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Mondal Brothers Chicken Delivery Service</title>
   <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="header-style.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&display=swap" rel="stylesheet">
     <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#f8b400">
   <script>
