--- a/retail-calculator/retail-calculator.html
+++ b/retail-calculator/retail-calculator.html
@@ -172,6 +172,23 @@
 
 <div id="reportBox"></div>
 
+<!-- ================= DOWNLOAD SECTION ================= -->
+<div class="download-section">
+    <h4 class="download-title">📥 Download Reports</h4>
+
+    <div class="download-grid">
+        <!-- PDF -->
+        <button class="download-btn pdf" onclick="downloadPdf('full')">
+            Full Report
+        </button>
+
+        <button class="download-btn pdf" onclick="downloadPdf('daywise')">
+            Daily Summary
+        </button>
+    </div>
+</div>
+
+
 <div id="transactionModal" class="modal">
     <div class="modal-content">
         <span class="close-btn" onclick="closeModal()">&times;</span>
@@ -200,7 +217,7 @@
 
 <!--<script src="./../script.js"></script>-->
 <script src="../local-name-storage.js"></script>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 <script src="retail-calculator-script.js"></script>
 <script src="../log-worker.js"></script>
 <script src="/pwa-installation.js"></script>
